src/test/ui/issues/issue-40749.stderr
error[E0308]: mismatched types
  --> $DIR/issue-40749.rs:2:9
   |
LL |     [0; ..10];
   |         ^^^^ expected usize, found struct `std::ops::RangeTo`
   |
   = note: expected type `usize`
              found type `std::ops::RangeTo<{integer}>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
