src/test/ui/issues/issue-40749.rs
fn main() {
    [0; ..10];
    //~^ ERROR mismatched types
    //~| expected type `usize`
    //~| found type `std::ops::RangeTo<{integer}>`
}
